<resources>
    <string name="app_name">ActivityProvider</string>

    <string name="request_1_label">Red</string>
    <string name="request_2_label">Green</string>
    <string name="request_3_label">blue</string>
    <string name="request_1_text">red</string>
    <string name="request_2_text">green</string>
    <string name="request_3_text">blue</string>
    <string name="start_button_label">Start</string>

    <string name="answer_1_label">North</string>
    <string name="answer_2_label">East</string>
    <string name="answer_3_label">West</string>
    <string name="answer_4_label">South</string>
    <string name="answer_1_text">north</string>
    <string name="answer_2_text">east</string>
    <string name="answer_3_text">west</string>
    <string name="answer_4_text">south</string>
    <string name="return_button_label">Return</string>
</resources>
