<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="jp.ac.titech.itpro.sdl.activityprovider.PublicActivity">

    <TextView
        android:id="@+id/request_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="@dimen/request_text_size" />

    <RadioGroup
        android:id="@+id/answer_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RadioButton
            android:id="@+id/answer_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_1_label"
            android:textSize="@dimen/button_text_size" />

        <RadioButton
            android:id="@+id/answer_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_2_label"
            android:textSize="@dimen/button_text_size" />

        <RadioButton
            android:id="@+id/answer_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_3_label"
            android:textSize="@dimen/button_text_size" />

        <RadioButton
            android:id="@+id/answer_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_4_label"
            android:textSize="@dimen/button_text_size" />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickReturnButton"
        android:text="@string/return_button_label"
        android:textSize="@dimen/button_text_size" />
</LinearLayout>